fixed wrap on mobile version contact page

--- a/my-portfolio/src/App.css
+++ b/my-portfolio/src/App.css
@@ -1006,6 +1006,7 @@ footer {
     position: absolute;
     left: 0;
     right: 0;
+    flex-wrap: nowrap;
   }
 
   .contact-me-socials {
